# FastAPI_MCP_template

./: .dockerignore  .gitignore  README.md  coverage.json  mypy.ini  package-lock.json  package.json  pyproject.toml  set-cdk-env.sh
.clinerules/: .clinerules.md  branch.md  cdk.md  coding.md  docker.md  error.md  fastapi.md  github.md
.github/tests/: Development.md
.github/workflows/: ci.yml  deploy-cdk.yml  deploy-docs.yml  mcp-inspector-test.yml
app/: __init__.py  main.py
app/application/: __init__.py
app/core/: config.py
app/infrastructure/: __init__.py
app/presentation/: __init__.py
cdk/: .gitignore  README-local-debug.md  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: fastapi-mcp-stack.ts
docker/: Dockerfile  docker-compose.yml
docs/: CDK_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCKER_E2E_TESTING.md  Development.md  E2E_TESTING_WITH_API_KEY.md  MCP_INSPECTOR_TESTING.md  README.md  SYNC_E2E_TESTING.md  USER_GUIDE.md  openapi.yaml
example/: README.md  api_client_example.py  main.py  test_api_connection.py
reference/: .gitkeep  act.md  aws-lambda-python-alpha.md  cdk.md  mcp.md  openapi_e2e_test.md  openapi_with_fastapi.md  poetry.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: build_lambda_layer.sh  deploy-cdk.sh  dry-run-cdk.sh  generate_inspector_report.py  generate_openapi.py  get_api_key_value.py  run_docker_e2e_tests.sh  run_docker_e2e_tests_sync.sh  run_inspector_e2e_test.sh  run_inspector_test_suite.sh  run_specific_sync_test.sh  run_sync_e2e_test.sh  run_tests.py  setup_dev.py
tests/: TEST_STRATEGY.md  conftest.py  logger_config.py  mock_data.py  mocks.py
tests/e2e/: __init__.py  mcp_inspector_test_cases.json  sync_test_utils.py  test_e2e.py  test_schemathesis.py
(+12 files in other folders)
